# IOCS_Anon

./: #.gitignore#  .gitignore  .gitmodules  ARCS_Test.code-workspace  CMakeLists.txt  CMakeLists.txt~  CVE.md  Exploits.md  Instructions.md  Makefile  README.md  Waterfall.code-workspace  compile.sh  dump.rdb  prepare.sh  taint.sh  todo.md  waterfall.py  waterfall.sh
OR_analysis/: Makefile
OR_analysis/scripts/: OR_analysis.sh  OR_calculate.py  dwarf_analysis.py
OR_analysis/sources/: #test.out#  .gdb_history  Waterfall.code-workspace  compile.sh  dyn_OR.cpp
asm_rewriter/: Makefile  binary_patch.py  core.sh
asm_rewriter/tests/: Makefile  libMakefile
comp_analysis/e9stuff/: .gitignore~  e9.py
comp_analysis/pku/: Makefile  README.md  execute.sh  move.sh  temp.lst
comp_analysis/scripts/: comp_analysis.sh
e9files/: e9patch.sh
e9files/src/: trampoline.c
e9patch/: e9patch.sh
e9patch/src/: trampoline.c
e9stuff/: .gdb_history  .gitignore  dump.rdb  e9.py  e9patch.sh  execute.sh
e9stuff/inputs/: epoll.objdump
e9stuff/outputs/: .gdb_history  dump.rdb  epoll.objdump
e9stuff/src/: init_mprotect.c  print.c  trampoline.c
fun_c14n/: .gdb_history  .gitignore  .gitignore~  comp_analysis.sh  todo.md
fun_c14n/input/: Makefile  epoll.c  linker_script.ld  tiny.c
include/: waterfall-ICFG.h  waterfall-analysis.h  waterfall-compart.h  waterfall-icfg.h  waterfall-main.h  waterfall-struct.h
include/archives/: waterfall-icfg.h
inputs/epoll/: epoll.c
lib_sources/: libdft-mod.bu  libdft-mod.cpp  makefile.rules
pku/: .gitignore  Makefile  README.md  pku_ex.c
pku/include/: pkuapi.h
pku/inputs/: epoll.c  linker_temp.ld  linker_text.ld
pku/src/: linker_script.ld  pkuapi.c
pku/tests/: #epoll.objdump#  .gdb_history  .gitignore  .gitignore~  COMPILE.md  Makefile  compile.sh  epoll  epoll.c  epoll.objdump  epoll_test.c  (+13 more)
scripts/: .gdb_history  callgraph.py  execute.sh  execute.sh~  execve.sh  function_analysis.py  nginx.sh  temp
sources/: CMakeLists.txt  libdft-mod.cpp  shroud.c  waterfall-ICFG.cpp  waterfall-analysis.cpp  waterfall-compart.cpp  waterfall-icfg.cpp  waterfall-main.cpp  waterfall-pass.cpp
static_analysis/: .gitignore  CMakeLists.txt  Makefile  arcs.sh  waterfall.sh
static_analysis/src/: CMakeLists.txt  arcs-icfg.cpp  arcs-main.cpp
taint_analysis/: Makefile  compile.sh
tests/: execve-test-overflow  scanf_ex
useful_scripts/: .gdb_history  c14n_analysis.py  dwarf_analysis.py  dwarf_analysis_latest.py  nginx.analysis  nginx_command  nginx_compile.sh  struct.objdump  taint_analysis.sh
userspace/: build.sh  waterfall_userspace.sh  waterfall_userspace.sh~
var_c14n/: arcs.sh  ibcs.sh
(+145 files in other folders)
